<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.auth.ForgotPasswordFragment"
    android:background="@drawable/gradient_orange">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_150"
        android:background="@drawable/login_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_26"
            android:layout_marginTop="@dimen/margin_20"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_20"
            android:elevation="@dimen/elevation_12"

            app:cardCornerRadius="@dimen/radius_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_20">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_hint"
                    android:textColor="@color/primary_color"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_30"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/email"
                    android:textColor="@color/primary_color"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_gmail_com"/>



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_send"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/primary_color"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_20"

                    />



            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>





</RelativeLayout>