<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.auth.LoginFragment"
    android:background="@drawable/gradient_orange">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_150"
    android:background="@drawable/login_background"
/>
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_40"
    android:layout_marginRight="@dimen/margin_20"
    android:layout_marginLeft="@dimen/margin_20"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_26"
        android:layout_marginTop="@dimen/margin_20"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_20"
        android:elevation="@dimen/elevation_12"

        app:cardCornerRadius="@dimen/radius_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_title"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/text_size_30"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/username_hint"
                android:textColor="@color/primary_color" />

            <EditText
                android:id="@+id/etIdentifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_gmail_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/password"
                android:textColor="@color/primary_color" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lock"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/forgot_password"
                android:textColor="@color/primary_color" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:backgroundTint="@color/primary_color"
                android:text="@string/btn_login"
                android:textColor="@color/white"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!-- Text: "Don't have an account? Sign up" -->
               <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:id="@+id/tvNoAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Don't have an account?"
                            android:textColor="@color/primary_color"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="4dp" />

                        <TextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sign up"
                            android:textColor="@color/primary_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                <!-- Google Sign-In Button -->
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" />

                <!-- ProgressBar (ẩn mặc định) -->
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>





</RelativeLayout>