<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_orange"
    tools:context=".ui.fragment.auth.SuccessVerificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_150"
        android:background="@drawable/login_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/verification_successful"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_26"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_20"
            android:elevation="@dimen/elevation_12"
            app:cardCornerRadius="@dimen/radius_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_20">

                <!-- Success Icon -->
                <ImageView
                    android:layout_width="@dimen/icon_size_100"
                    android:layout_height="@dimen/icon_size_100"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_success" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/congratulations"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:text="@string/verification_success_message"
                    android:textColor="@color/primary_color" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_30"
                    android:backgroundTint="@color/primary_color"
                    android:text="@string/continue_text"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>